--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,8 +1,13 @@
 {
+  "welcome": "Welcome",
+  "cart": "Cart",
+  "favorites": "Favorites",
   "login": "Login",
   "logout": "Logout",
-  "welcome": "Welcome",
-  "favorites": "My Favorites",
-  "cart": "Cart",
-  "buy": "Buy"
+  "search_placeholder": "Search products...",
+  "total": "Total",
+  "confirmPurchase": "Confirm Purchase",
+  "cancel": "Cancel",
+  "continueShopping": "Continue Shopping",
+  "clearCart": "Clear Cart"
 }
