Favoriler sayfasında yazılar sağa hizalandı ve i18n entegre edildi

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -11,6 +11,8 @@
   "min": "Min",
   "max": "Max",
   "addToCart": "Add to Cart",
+  "favoritesTitle": "My Favorites",
+  "noFavorites": "You have no favorite products.",
   "addedToCart": "Added to Cart",
   "filter": "Filter",
   "categories": {
