ConfirmModal i18n desteği eklendi ve diğer sayfalara entegre edildi

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -15,6 +15,15 @@
   "noFavorites": "You have no favorite products.",
   "addedToCart": "Added to Cart",
   "filter": "Filter",
+  "cartTitle": "My Cart",
+  "cartEmpty": "Your cart is empty.",
+  "total": "Total",
+  "confirmPurchase": "Confirm Purchase",
+  "clearCart": "Clear Cart",
+  "cancel": "Cancel",
+  "continueShopping": "Continue Shopping",
+  "purchaseSuccess": "Purchase completed successfully!",
+  "confirmPurchaseTitle": "Do you confirm the purchase?",
   "categories": {
     "all": "All",
     "clothing": "Clothing",
