--- a/src/i18n/locales/tr.json
+++ b/src/i18n/locales/tr.json
@@ -15,6 +15,15 @@
   "favoritesTitle": "Favorilerim",
   "noFavorites": "Hiç favori ürün yok.",
   "filter": "Filtrele",
+  "cartTitle": "Sepetim",
+  "cartEmpty": "Sepetiniz boş.",
+  "total": "Toplam",
+  "confirmPurchase": "Satın Al",
+  "clearCart": "Sepeti Temizle",
+  "cancel": "Vazgeç",
+  "continueShopping": "Alışverişe Devam Et",
+  "purchaseSuccess": "Satın alma işlemi başarıyla gerçekleşti!",
+  "confirmPurchaseTitle": "Satın Almayı Onaylıyor musunuz?",
   "categories": {
     "all": "Tümü",
     "clothing": "Giyim",
