Added footer and about page. finalized frontend.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -15,6 +15,7 @@
   "noFavorites": "You have no favorite products.",
   "addedToCart": "Added to Cart",
   "filter": "Filter",
+  "about": "About",
   "cartTitle": "My Cart",
   "cartEmpty": "Your cart is empty.",
   "total": "Total",
