--- a/src/i18n/locales/tr.json
+++ b/src/i18n/locales/tr.json
@@ -12,6 +12,7 @@
   "max": "Max",
   "addToCart": "Sepete Ekle",
   "addedToCart": "Sepete Eklendi",
+  "about": "Hakkımda",
   "favoritesTitle": "Favorilerim",
   "noFavorites": "Hiç favori ürün yok.",
   "filter": "Filtrele",
