added connected login page to backend and added register modal

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -9,12 +9,15 @@
   "category": "Category",
   "priceRange": "Price Range",
   "min": "Min",
+  "registery f": "registery failed",
+  "registery s": "registery successfull",
   "max": "Max",
   "addToCart": "Add to Cart",
   "favoritesTitle": "My Favorites",
   "noFavorites": "You have no favorite products.",
   "addedToCart": "Added to Cart",
   "filter": "Filter",
+  "register": "REGISTER",
   "about": "About",
   "cartTitle": "My Cart",
   "cartEmpty": "Your cart is empty.",
