--- a/src/i18n/locales/tr.json
+++ b/src/i18n/locales/tr.json
@@ -11,8 +11,11 @@
   "min": "Min",
   "max": "Max",
   "addToCart": "Sepete Ekle",
+  "registery f": "kayıt başarısız",
+  "registery s": "kayıt başarılı",
   "addedToCart": "Sepete Eklendi",
   "about": "Hakkımda",
+  "register": "KAYIT OL",
   "favoritesTitle": "Favorilerim",
   "noFavorites": "Hiç favori ürün yok.",
   "filter": "Filtrele",
