fixed typos and header language support

--- a/src/i18n/locales/tr.json
+++ b/src/i18n/locales/tr.json
@@ -34,6 +34,7 @@
   "rememberMe": "Beni Hatırla",
   "loginButton": "GİRİŞ YAP",
   "loginError": "Kullanıcı adı ve şifre gereklidir.",
+  "bundlesheader": "Kampanyalar",
   "categories": {
     "all": "Tümü",
     "clothing": "yaratıcılık",
