--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -34,6 +34,7 @@
   "rememberMe": "Remember Me",
   "loginButton": "LOGIN",
   "loginError": "Username and password are required.",
+  "bundlesheader": "Bundles",
   "categories": {
     "all": "All",
     "clothing": "productivity",
